# SparseMoEFed

./: .gitignore  README.md  SparseFedMoE_Architecture.md  pyproject.toml  requirements.txt
jobs/fedavg_olmoe/: meta.json
jobs/fedavg_olmoe/app/config/: config_fed_client.json  config_fed_server.json
jobs/fedavg_olmoe/app/custom/: olmoe_sft_trainer.py
jobs/sparsefedmoe_olmoe/: meta.json
jobs/sparsefedmoe_olmoe/app/config/: config_fed_client.json  config_fed_server.json
jobs/sparsefedmoe_olmoe/app/custom/: sparsefedmoe
scripts/: plot_activation.py  prepare_data.py  run_simulator.sh  sbatch_fedavg.sh  sbatch_sparse.sh 
src/sparsefedmoe/: __init__.py
src/sparsefedmoe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sparsefedmoe/client/: activation_tracker.py  olmoe_sft_trainer.py  sparse_moe_decoder.py  sparse_moe_encoder.py
src/sparsefedmoe/common/: client_clusterer.py  config.py  expert_compressor.py  model_utils.py
src/sparsefedmoe/server/: freq_weighted_controller.py  global_floor_monitor.py  router_alignment.py
tests/: conftest.py  test_activation_tracker.py  test_freq_weighted_aggregator.py  test_global_floor_monitor.py  test_metrics.py  test_model_utils.py  test_router_alignment.py  test_sparse_encoder.py
